fix: fix title overflow

--- a/client/src/components/GameCard/GameCard.module.css
+++ b/client/src/components/GameCard/GameCard.module.css
@@ -43,6 +43,8 @@ div.paragraph {
 
 h2.title {
   white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .content {
